# ofxstatement-bkk

./: Makefile  Pipfile  README.rst  pyproject.toml
src/ofxstatement_bkk/: plugin.py
tests/: sample-statement.csv  test_sample.py
