[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-bkk"
version = "0.0.1"
authors = [
  { name="Andrey Lebedev", email="andrey@lebedev.lt" },
  { name="Dan Moore", email="dan@suncup.net" },
]
description = "Bangkok Bank plugin for ofxstatement"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "bangkok", "ofxstatement"]
dependencies = [
  "ofxstatement",
]

[project.urls]
Homepage = "https://github.com/mooredan/ofxstatement-bkk/"

[project.entry-points."ofxstatement"]
bkk = "ofxstatement_bkk.plugin:BkkPlugin"
